--- a/CV_Projekt/CV_Projekt/wwwroot/css/site.css
+++ b/CV_Projekt/CV_Projekt/wwwroot/css/site.css
@@ -72,6 +72,10 @@ input[type="checkbox"]:checked {
   
 }
 
+.btn-chat:hover {
+    border-block 1px solid #ff6219;
+}
+
 .message-p {
     max-width: 80%; 
     white-space: nowrap; 
