--- a/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
@@ -4,22 +4,7 @@
 <div class="row">
 <h2 style="color:#FFF;">Meddelanden</h2>
 
-@*
-<a  class="btn btn-primary text-light"
-           style="background-color:#ff6219; margin-bottom:2rem;"
-           asp-controller="Message"
-           asp-action="Add"
-           asp-route-senderId="@Model.Receiver.Id"
-           asp-route-receiverId="@Model.Sender.Id">
-           Skriv meddelande till @ViewBag.FullName
-</a>*@
 
-<a  class="btn btn-primary text-light"
-           style="background-color:#ff6219; margin-bottom:2rem;"
-           asp-controller="Message"
-           asp-action="Inbox">
-           Tillbaka
-</a>
     <section class="h-100">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center">
@@ -33,7 +18,7 @@
                                             <h5 class="mb-0" style="color: #ff6219;"><b>Inkorg</b></h5>
                                             <h6 class="mb-0" style="color: #ff6219;">@Model.OtherUser.FirstName @Model.OtherUser.LastName</h6>
                                         </div>
-                                        <div class="card-body" data-mdb-perfect-scrollbar-init style="position: relative; height: 500px">
+                                        <div class="card-body" id="messageCard" style="position: relative; max-height: 500px; overflow-y: auto;">
                                             @foreach(Message message in @Model.AllMessages)
                                             {
                                                 @if(message.SenderId.Equals(Model.LoggedInUser.Id))
@@ -45,7 +30,7 @@
                                                         </div>
                                                         <div class="d-flex flex-row justify-content-end mb-4 pt-1">
                                                             <div>
-                                                                <p class="small p-2 me-3 mb-1 text-white rounded-3" style="background-color:#ff6219;">
+                                                            <p class="small p-2 me-3 mb-1 text-white rounded-3" style="background-color:#ff6219; max-width: 300px; word-wrap: break-word;">
                                                                     @message.Content
                                                                 </p>
                                                                 <p class="small me-3 mb-3 rounded-3 text-muted d-flex justify-content-end">@message.Date</p>
@@ -57,7 +42,7 @@
                                                         <div class="modal-dialog" role="document">
                                                             <div class="modal-content">
                                                                 <div class="modal-header">
-                                                                    <h5 class="modal-title" id="deleteMessageSender-@message.Id">Bekräfta?</h5>
+                                                                    <h5 class="modal-title" id="deleteMessageSender-@message.Id">Bekräfta</h5>
                                                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                                                         <span aria-hidden="true">&times;</span>
                                                                     </button>
@@ -68,7 +53,7 @@
                                                                 <div class="modal-footer">
                                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Behåll</button>
                                                                     <form method="post" asp-action="RemoveMessage" asp-route-mid="@message.Id" asp-route-oid="@Model.OtherUser.Id">
-                                                                        <button type="submit" class="btn btn-primary" style="color:#ff6219">Ta bort</button>
+                                                                        <button type="submit" class="btn btn-primary" style="background-color:#ff6219; color:#fff">Ta bort</button>
                                                                     </form>
                                                                 </div>
                                                             </div>
@@ -85,7 +70,8 @@
                                                             <img src="@Url.Content(Model.OtherUser.PictureUrl)"
                                                                  alt="avatar 1" style="width: 45px; height: 100%;">
                                                             <div>
-                                                                <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color:lightgrey;">@message.Content</p>
+                                                                <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color:lightgrey; max-width: 300px; word-wrap: break-word;">
+                                                                    @message.Content</p>
                                                                 <div class="row-cols-2">
                                                                     <p class="small ms-3 mb-3 rounded-3 text-muted">@message.Date</p>
                                                                 </div>
@@ -95,7 +81,7 @@
                                                         <div class="modal-dialog" role="document">
                                                             <div class="modal-content">
                                                                 <div class="modal-header">
-                                                                    <h5 class="modal-title" id="deleteMessageReceiver-@message.Id">Bekräfta?</h5>
+                                                                    <h5 class="modal-title" id="deleteMessageReceiver-@message.Id">Bekräfta</h5>
                                                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                                                         <span aria-hidden="true">&times;</span>
                                                                     </button>
@@ -116,40 +102,24 @@
                                             }
                                             <div class="card-footer text-muted d-flex justify-content-end align-items-center p-3">
                                                 <a asp-action="Add" asp-controller="Message" asp-route-oid="@Model.OtherUser.Id" class="btn" style="background-color:#ff6219; color:#fff;"><i class="fas fa-paper-plane"></i>Svara</a>
-                                                <a class="btn" style="color:#ff6219; background-color:#fff; margin-left: 3px;">Tillbaka</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </section>
+                        <a asp-controller="Message" asp-action="Inbox" class="btn" style="color:#ff6219; background-color:#fff; margin-left: 3px;">Tillbaka</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    
-
-    @*
-
-<h1>@Model</h1>
-
-@foreach (Message mess in @Model.AllMessages)
-{
-    <div class="card">
-        <h4>@mess.Sender.FirstName @mess.Sender.LastName</h4>
-        <h4>@mess.Date</h4>
-        <h4> @mess.Subject</h4>
-        <h5> @mess.Content</h5>
-        <form asp-controller="Chat" asp-action="RemoveMessage" asp-route-messageId="@mess.Id" method="post" onsubmit="return confirmDelete();">
-                <button type="submit" class="btn btn-primary text-light"
-               style="background-color:#ff6219; margin-bottom:2rem;">Ta Bort</button>
-        </form>
-        <script>
-        function confirmDelete() {
-            return confirm("Är du säker på att du vill ta bort detta objekt?");
-        }
-        </script>
-    </div>
-}*@
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var messageCard = document.getElementById("messageCard");
+            if (messageCard) {
+                messageCard.scrollTop = messageCard.scrollHeight;
+            }
+        });
+    </script>
