fuck jag satt på main

--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -139,11 +139,13 @@
 							</div>
 						</div>
 						<div>
-							<form method="post" asp-action="FindFriend" asp-controller="Profile" asp-route-id="@Model.User.Id">
-								<input asp-for="User.Id" value="@Model.User.Id" hidden />
-								<button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219; margin-bottom:1rem;">Hitta någon som jag!</button>
-							</form>
-
+							@if (Model.User.Id.Equals(User.FindFirstValue(ClaimTypes.NameIdentifier)))
+							{
+								<form method="post" asp-action="FindFriend" asp-controller="Profile" asp-route-id="@Model.User.Id">
+									<input asp-for="User.Id" value="@Model.User.Id" hidden />
+									<button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219; margin-bottom:1rem;">Hitta någon som jag!</button>
+								</form>
+							}
 						</div>
 					</div>
 				</div>
