--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -42,11 +42,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white">
+                                <a asp-controller="Message" asp-action="Inbox" class="nav-link text-white">
                                     <i class="fa-solid fa-envelope text-light position-relative">
                                         @if(Model.UnreadMessages > 0)
                                         {
-                                            <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">@Model.UnreadMessages</span>
+                                                <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">@Model.UnreadMessages</span>
                                         }
                                     </i>
                                 </a>
