--- a/CV_Projekt/CV_Projekt/Views/Message/Inbox.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/Inbox.cshtml
@@ -1,4 +1,5 @@
 ﻿@model InboxViewModel
+
 @using System.Security.Claims
 
 <section class="h-100">
@@ -6,7 +7,6 @@
         <div class="row d-flex justify-content-center">
             <div class="col col-lg-9 col-xl-8">
                 <div class="card" style="border: 2px solid #ff6219; ">
-
                     <section>
                         <div class="container py-5">
                             <div class="row d-flex justify-content-center">
@@ -14,58 +14,51 @@
                                     <div class="card-header d-flex justify-content-between align-items-center p-3">
                                         <h5 class="mb-0" style="color: #ff6219;"><b>Inkorg</b></h5>
                                     </div>
-
                                     <div class="card-body" data-mdb-perfect-scrollbar-init style="position: relative; height: 500px">
                                         @foreach (var user in Model.UsersInContact)
-{
+                                        {
                                             <div class="d-flex flex-row justify-content-start mb-4 pt-1">
-												<a asp-controller="Chat" asp-action="Chat11" asp-route-otherId="@user.Id" class="btn btn-chat" style="color:#ff6219;"><u>@user.FirstName @user.LastName</u></a>
-                                                     @{
-                                                 var unreadCount = 0;
-                                                for(int i = 0; i < Model.ReceivedMessages.Count; i++)
-                                                 {
-                                                     Message aMessage = Model.ReceivedMessages[i];
-                                                         if(aMessage.SenderId.Equals(user.Id) && !aMessage.isRead)
+                                                <a asp-controller="Chat" asp-action="Chat11" asp-route-otherId="@user.Id" class="btn btn-chat" style="color:#ff6219;"><u>@user.FirstName @user.LastName</u></a>
+                                                @{
+                                                    var unreadCount = 0;
+                                                    for (int i = 0; i < Model.ReceivedMessages.Count; i++)
                                                     {
-                                                        unreadCount++;
-                                                    }
-                                                    }
-                                                                                                }
-                                                                                         @if(unreadCount > 0)
+                                                        Message aMessage = Model.ReceivedMessages[i];
+                                                        if (aMessage.SenderId.Equals(user.Id) && !aMessage.isRead)
                                                         {
-
-                                                            <i class="fa-solid fa-envelope position-relative" style="color:#ff6219; font-size:16px;">
-                                                        <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">@unreadCount</span>
-                                                            </i>
+                                                            unreadCount++;
                                                         }
-                                                </div>
+                                                    }
                                                 }
+                                                @if (unreadCount > 0)
+                                                {
+                                                    <i class="fa-solid fa-envelope position-relative" style="color:#ff6219; font-size:16px;">
+                                                        <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">@unreadCount</span>
+                                                    </i>
+                                                }
+                                            </div>
+                                        }
                                         <div class="card-header d-flex justify-content-between align-items-center p-3">
                                             <h5 class="mb-0" style="color: #ff6219;"><b>Anonyma Meddelanden</b></h5>
-                                                                                            </div>
+                                        </div>
 
-                                                    @foreach(Message anonMess in Model.AnonMessages)
-                                                    {
-                                                        <div class="d-flex flex-row justify-content-start mb-4 pt-1">
-                                                        <form method="post" asp-action="SetToRead" asp-route-mid="@anonMess.Id" >
-													<p class="small p-2 me-3 mb-1 text-white rounded-3" style="background-color:#ff6219;"><b>@anonMess.SenderName</b><br />@anonMess.Content<br /><i>@anonMess.Date</i></p>
-                                                            
-                                                            <button type="submit" style="background-color:#ff6219; color:#fff; margin-top:1rem;">Markera som läst</button>
-                                                        </form>
-                                                        </div>
-                                                    }
-                                         
-                                         </div>
-                                         <div class="d-flex justify-content-center">
-									<a class="btn" style="color:#ff6219; background-color:#fff;border:1px solid #ff6219; margin-left: 3px;">Tillbaka</a>
-									</div>
-                           
+                                        @foreach (Message anonMess in Model.AnonMessages)
+                                        {
+                                            <div class="d-flex flex-row justify-content-start mb-4 pt-1">
+                                                <form method="post" asp-action="SetToRead" asp-route-mid="@anonMess.Id">
+                                                    <p class="small p-2 me-3 mb-1 text-white rounded-3" style="background-color:#ff6219;"><b>@anonMess.SenderName</b><br />@anonMess.Content<br /><i>@anonMess.Date</i></p>
+                                                    <button type="submit" style="background-color:#ff6219; color:#fff; margin-top:1rem;">Markera som läst</button>
+                                                </form>
+                                            </div>
+                                        }
+                                    </div>
+                                    <div class="d-flex justify-content-center">
+                                        <a asp-action="Index" asp-controller="Home" class="btn" style="color:#ff6219; background-color:#fff;border:1px solid #ff6219; margin-left: 3px;">Tillbaka</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </section>
-                
-
                 </div>
             </div>
         </div>
