--- a/CV_Projekt/CV_Projekt/Views/Project/Add.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Project/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjectViewModel
 
 @{
-	ViewData["Title"] = "Projekt";
+    ViewData["Title"] = "Projekt";
 }
 
 <body class="bodyUserProfileSettings"
@@ -24,110 +24,42 @@
         </h4>
         <div class="py-2">
             <form asp-action="Add" method="post">
-            <div class="row py-2">
-                <div class="col-md-6">
-                    <label class="settingsLbl" for="title">Projektets Titel</label>
-                    <input asp-for="ProjectToSave.Title" type="text" class="bg-light form-control">
-                </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                    <label class="settingsLbl" for="startdate">Startdatum</label>
-                    <input asp-for="ProjectToSave.StartDate" type="date" value="@DateTime.Now" class="bg-light form-control">
-                </div>
-            </div>
-            <div class="row py-2">
-				<div class="col-md-6">
-					<label class="settingsLbl" for="projDescription">Projektbeskrivning</label>
-					<input asp-for="ProjectToSave.Description" type="text" class="bg-light form-control">
-                    
-                </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                     <label class="settingsLbl" for="enddate">Slutdatum</label>
-                     <input asp-for="ProjectToSave.EndDate" type="date" value="@DateTime.Now" class="bg-light form-control">
-                </div>
-            </div>
-            <div class="row py-2">
-                <div class="col-md-6 ">
-                    <label class="settingsLbl" for="projCreator">Skapare av projekt</label>
-                        <input asp-for="ProjectToSave.CreatorId" value="@Model.Creator.Id" type="text" class="bg-light form-control" hidden>
-                        <input value="@Model.Creator.FirstName @Model.Creator.LastName" disabled/>
-                </div>
-                    <div class="col-md-6 pt-md-0 pt-3">
-                        
-                            </div>
-                            </div>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="row py-2">
-                    <div class="col-md-6 d-flex align-items-center justify-content-center">
-                        
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" style="background-color:#fff; color:#ff6219;" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa-solid fa-plus"></i><i class="fa-solid fa-user"></i>Lägg till Deltagare
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-lg-end scroll" id="dropdownMenu" aria-labelledby="dropdownMenuButton">
-                            @foreach (var user in Model.Users)
-                            {
-                                <li><a class="dropdown-item" href="#" data-title="@user.FirstName @user.LastName">@user.FirstName @user.LastName</a></li>
-                            }
-                        </ul>
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="title">Projektets Titel</label>
+                        <input asp-for="ProjectToSave.Title" type="text" class="bg-light form-control">
                     </div>
-
-                    <div class="col-md-6 pt-md-0 pt-3" id="listgroupdiv">
-
-                        <label class="settingsLbl" for="chosenParticipants">Projektdeltagare</label>
-                        <ul id="selectedParticipantsList" class="list-group">
-                          
-                        </ul>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="startdate">Startdatum</label>
+                        <input asp-for="ProjectToSave.StartDate" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="bg-light form-control">
                     </div>
                 </div>
-               
-            <div class="py-3 pb-4 border-bottom">
-                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skapa Projekt</button>
-                <button class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
-            </div>
-           
+                <div class="row py-2">
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="projDescription">Projektbeskrivning</label>
+                        <input asp-for="ProjectToSave.Description" type="text" class="bg-light form-control">
+
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="enddate">Slutdatum</label>
+                        <input asp-for="ProjectToSave.EndDate" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" class="bg-light form-control">
+                    </div>
+                </div>
+                <div class="row py-2">
+                    <div class="col-md-6 ">
+                        <label class="settingsLbl" for="projCreator">Skapare av projekt</label>
+                        <input asp-for="ProjectToSave.CreatorId" value="@Model.Creator.Id" type="text" class="bg-light form-control" hidden>
+                        <input value="@Model.Creator.FirstName @Model.Creator.LastName" disabled />
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                    </div>
+                </div>
+                <div class="py-3 pb-4 border-bottom">
+                    <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skapa Projekt</button>
+                    <button asp-action="ShowProjectsView" class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
+                </div>
             </form>
         </div>
     </div>
-    <script>
-            document.addEventListener("DOMContentLoaded", function() {
-            var items = document.querySelectorAll(".dropdown-item");
-            var participantsList = document.getElementById("selectedParticipantsList");
-
-            items.forEach(function(item) {
-                item.addEventListener("click", function(event) {
-                    var selectedTitle = event.target.getAttribute("data-title");
-
-                    
-                    if (!isParticipantAdded(selectedTitle)) {
-                       
-                        var li = document.createElement("li");
-                        li.classList.add("list-group-item");
-                        li.textContent = selectedTitle;
-
-                        var removeButton = document.createElement("button");
-                        removeButton.classList.add("btn", "btn-sm", "btn-secondary", "ms-2");
-                        removeButton.textContent = "X";
-                        removeButton.addEventListener("click", function() {
-                            participantsList.removeChild(li); 
-                        });
-
-                        li.appendChild(removeButton); 
-                        participantsList.appendChild(li); 
-                    }
-
-                    event.preventDefault();
-                });
-            });
-
-            function isParticipantAdded(title) {
-                var existingParticipants = participantsList.querySelectorAll("li");
-                for (var i = 0; i < existingParticipants.length; i++) {
-                    if (existingParticipants[i].textContent.includes(title)) {
-                        return true;
-                    }
-                }
-                return false;
-            }
-        });
-
-
-    </script>
 </body>
