--- a/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
@@ -100,10 +100,6 @@
                 <button class="btn border border-light button" style="background-color: #fff; color: #ff6219">Avbryt</button>
             </div>
             <div class="d-sm-flex align-items-center pt-3" id="deactivate">
-                <div>
-                    <b>Avaktivera Konto</b>
-                    <p></p>
-                </div>
                 <div class="ml-auto">
                     @if(Model.User.isActive)
                     {
@@ -115,6 +111,7 @@
                     }
                 </div>
             </div>
+                <div class="py-3 pb-4 border-bottom"></div>
         </div>
         </form>
         <div>
